# heputils

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: ci.yml  lint.yml  publish-package.yml
binder/: apt.txt  postBuild
examples/: dev-example.ipynb  example.json
src/heputils/: __init__.py  commandline.py  convert.py  plot.py  utils.py  version.py
src/heputils/cli/: __init__.py  cli.py
tests/: example_files.py  test_cli.py  test_import.py  test_plot.py
