[metadata]
name = heputils
version = 0.0.1
description = Helper utilities around the Scikit-HEP ecosystem for common tasks in HEP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthewfeickert/heputils
author = Matthew Feickert
author_email = matthew.feickert@cern.ch
license = BSD 3-Clause
license_file = LICENSE
keywords = hep utilities scikit-hep physics
project_urls =
    Documentation = https://matthewfeickert.github.io/heputils/
    Source = https://github.com/matthewfeickert/heputils
    Tracker = https://github.com/matthewfeickert/heputils/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[bdist_wheel]
universal = 1

[options]
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    click>=6.0
    awkward1>=0.2
    uproot4>=0.0.27
    hist[plot]>=2.0.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    heputils = heputils.cli:cli

[build_sphinx]
project = heputils
source-dir = docs
build-dir = docs/_build
all-files = 1
warning-is-error = 1
